fix: ie11 dashboard wrap, form autocomplete, aantekeningen, correspondentie file not visible (#166)

--- a/public/scss/includes/_helpers.scss
+++ b/public/scss/includes/_helpers.scss
@@ -150,3 +150,8 @@
     display: block;
   }
 }
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
